--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 h1 {
     text-align: center;
     font-family: "Kumbh Sans", sans-serif;
+    font-size: 75px;
 }
 
 body {
@@ -9,20 +10,20 @@ body {
 
 
 
-  * {
+* {
     box-sizing: border-box;
-  }
+}
   
-  body {
+body {
     font-family: "DM Sans", sans-serif;
     background-color: #eeeeee;
     margin: 0;
     padding: 0;
-  }
+}
   
-  header h1 {
+header h1 {
     font-family: "Kumbh Sans", sans-serif;
-    font-size: 5em;
+    font-size: 50px;
     background-color: #000000;
     background-size: 100%;
     -webkit-background-clip: text;
@@ -31,6 +32,10 @@ body {
     -moz-text-fill-color: transparent;
     text-align: center;
     font-weight: bolder;
-  }
+}
 
+.maintext p {
+  text-align: center;
+  font-size: 35px;
+}
  
