--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@ h1 {
     text-align: center;
     font-family: "Kumbh Sans", sans-serif;
     font-size: 75px;
+    padding-top: 70px;
 }
 
 body {
@@ -32,6 +33,7 @@ header h1 {
     -moz-text-fill-color: transparent;
     text-align: center;
     font-weight: bolder;
+    padding-top: 10px;
 }
 
 .maintext p {
@@ -39,3 +41,40 @@ header h1 {
   font-size: 35px;
 }
  
+.about-button button {
+    background-color: #000000;
+    background-image: linear-gradient(to top, #0f66d2 0%, #0660c6 100%);
+    background-size: 100%;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    cursor: pointer;
+    position: absolute;
+    font-size: 2em;
+    left: 25%;
+    -ms-transform: translate(-25%, -25%);
+    transform: translate(-25%, -25%);
+    color: #000000;
+    font-weight: bold;
+    border-radius: 20px;
+    box-shadow: 5px 5px 5px grey;
+}
+
+.what-im-working-on button {
+    background-color: #000000;
+    background-image: linear-gradient(to top, #0f66d2 0%, #0660c6 100%);
+    background-size: 100%;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    cursor: pointer;
+    position: absolute;
+    font-size: 2em;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    color: #000000;
+    font-weight: bold;
+    border-radius: 20px;
+    box-shadow: 5px 5px 5px grey;
+}
