--- a/css/index.css
+++ b/css/index.css
@@ -52,8 +52,8 @@ header h1 {
     position: absolute;
     font-size: 2em;
     left: 25%;
-    -ms-transform: translate(-25%, -25%);
-    transform: translate(-25%, -25%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     color: #000000;
     font-weight: bold;
     border-radius: 20px;
@@ -78,3 +78,29 @@ header h1 {
     border-radius: 20px;
     box-shadow: 5px 5px 5px grey;
 }
+
+.contact button {
+    background-color: #000000;
+    background-image: linear-gradient(to top, #0f66d2 0%, #0660c6 100%);
+    background-size: 100%;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    cursor: pointer;
+    position: absolute;
+    font-size: 2em;
+    left: 75%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    color: #000000;
+    font-weight: bold;
+    border-radius: 20px;
+    box-shadow: 5px 5px 5px grey;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+  }
