--- a/css/links.css
+++ b/css/links.css
@@ -39,3 +39,9 @@ header h1 {
     border-radius: 10px;
     float: left;
 }
+
+header h2 {
+    text-align: center;
+    font-size: 30px;
+    color: #5865f2;
+}
