--- a/css/index.css
+++ b/css/index.css
@@ -48,9 +48,12 @@ p {
     font-size: 24px;
 }
 
-footer {
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     background-color: #333;
-    color: white;
-    padding: 20px;
+    color: #fff;
     text-align: center;
+    padding: 10px 0;
 }
