--- a/css/links.css
+++ b/css/links.css
@@ -48,3 +48,18 @@ h2 {
     font-size: 30px;
     color: #5865f2;
 }
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+}
+
+.footer {
+    text-align: center;
+    font-size: 24px;
+}
