--- a/css/index.css
+++ b/css/index.css
@@ -53,7 +53,7 @@ p {
     bottom: 0;
     width: 100%;
     background-color: #333;
-    color: #fff;
+    color: #000;
     text-align: center;
     padding: 10px 0;
 }
