--- a/css/links.css
+++ b/css/links.css
@@ -54,7 +54,7 @@ h2 {
     bottom: 0;
     width: 100%;
     background-color: #333;
-    color: #fff;
+    color: #000;
     text-align: center;
     padding: 10px 0;
 }
